# hyperswitch-encryption-service

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  diesel.toml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  postman-collection-runner.yml
benches/: encryption_bench.rs
config/: development.toml  prometheus.yml
docker/: README.md  hashcorp_vault.yml
docker/development/: docker-compose.yml
docker/local/: Dockerfile.local  docker-compose.yml
docs/: DEK_REENCRYPTION_API.md
migrations/2024-05-28-075150_create_dek_table/: down.sql  up.sql
migrations/2024-06-05-101923_create_created_at_index/: down.sql  up.sql
migrations/2024-06-07-102339_version_to_int/: down.sql  up.sql
migrations/2024-06-10-081622_add_source/: down.sql  up.sql
migrations/2024-09-30-125631_add-token-column/: down.sql  up.sql
migrations/2026-07-02-073351_drop-token-column/: up.sql
migrations/2026-07-02-130452_drop-token-column/: down.sql  up.sql
postman/collection-dir/: .info.json  .meta.json  .variable.json
postman/collection-dir/Create Key/: event.test.js  request.json
postman/collection-dir/Decrypt Data/: .event.meta.json  request.json
postman/collection-dir/Decrypt Multiple Objects/: event.test.js  request.json
postman/collection-dir/Encrypt Data/: event.test.js  request.json
postman/collection-dir/Encrypt Multiple Objects/: event.test.js  request.json
postman/collection-dir/Rotate Key/: request.json
postman/collection-dir/Transfer Key/: request.json
postman/collection-json/: Postman.postman_collection.json  postman_collection.json
scripts/docker/: docker-setup.sh  setup.sh
scripts/tls/: gen_certs.sh
src/: app.rs  config.rs  consts.rs  core.rs  crypto.rs  env.rs  errors.rs  lib.rs  metrics.rs  multitenancy.rs  request_id.rs  routes.rs  schema.rs  services.rs  storage.rs  types.rs  utils.rs  workspace.rs
src/app/: tls.rs
src/core/: crypto.rs  datakey.rs  health.rs  metrics.rs
src/core/crypto/: crux.rs  custodian.rs  decryption.rs  encryption.rs
src/core/datakey/: create.rs  list.rs  reencrypt.rs  rotate.rs  transfer.rs
src/crypto/: aes256.rs  blake3.rs  kms.rs  vault.rs
src/env/: logger.rs  metrics.rs  observability.rs
src/errors/: app.rs  crypto.rs  db.rs
src/metrics/: mod.rs
src/routes/: crypto.rs  datakey.rs  health.rs  metrics.rs
src/services/aws/: config.rs
src/storage/: adapter.rs  cache.rs  dek.rs  types.rs
src/storage/adapter/: cassandra.rs  postgres.rs
src/storage/adapter/cassandra/: dek.rs
src/storage/adapter/postgres/: dek.rs
src/storage/cache/: core.rs  statics.rs
src/storage/types/: dek.rs
src/types/: core.rs  method.rs  requests.rs  response.rs
src/types/core/: data.rs  identifier.rs  key.rs
src/types/requests/: data_key.rs  decryption.rs  encryption.rs
src/types/response/: datakey.rs  decryption.rs  encryption.rs
