[package]
name = "cripta"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[patch.crates-io]
tokio-rustls = { git = "https://github.com/rustls/tokio-rustls", rev = "3a153acec6c4d189eb5de501b2155b4484b8651b" } # main

# All the AES,AWS,Vault features will be used as a runtime feature flag rather than compiletime
[features]
aes = []
mtls = ["dep:rustls", "dep:rustls-pemfile", "axum-server/tls-rustls"]
aws = []
release = ["aws", "mtls"]
vault = []
cassandra = []

[dependencies]
cargo_metadata = "0.18.1"
error-stack = "0.4.1"
thiserror = "1.0.58"
aws-config = { version = "1.5.0" }
aws-sdk-kms = { version = "1.29.0" }
axum = { version = "0.7.5", features = ["macros"] }
axum-server = {git = "https://github.com/dracarys18/axum-server.git",rev ="5430efefd14b43cbbc8e4faa50ff9274b8b8b7aa"}
base64 = "0.22.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower-http = {version = "0.5.2", features = ["trace","request-id","util"] }
ulid = "1.1.2"
tower = "0.4.13"
trace = "0.1.7"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", default-features = true, features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2.3"
opentelemetry = { version = "0.23.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.23.0", features = ["metrics"] }
opentelemetry-prometheus = "0.16.0"
prometheus = "0.13.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
masking = { git = "https://github.com/juspay/hyperswitch.git",tag = "2024.12.17.0",features = ["cassandra"] }
async-trait = "0.1.80"
hex = "0.4.3"
charybdis = { git = "https://github.com/dracarys18/charybdis.git", rev = "1637c263f512adf7840705e3ab405a113437a6e3" }
scylla = { git = "https://github.com/juspay/scylla-rust-driver.git",rev = "5700aa2847b25437cdd4fcf34d707aa90dca8b89", features = ["time-03"]}
ring = { version = "0.17.8", features = ["std"] }
strum = { version = "0.26", features = ["derive"] }
futures = "0.3.30"
time = { version = "0.3.36", features = ["parsing"]}
diesel = { version = "2.2.4", features = ["postgres", "serde_json", "time"] }
diesel-async = { version = "0.5.0", features = ["postgres", "bb8"] }
config = { version = "0.14.0", features = ["toml"] }
serde_path_to_error = "0.1.16"
moka = { version = "0.12", default-features = false, features = ["future"]}
rustls = { version = "0.23.10", default-features = false,features = ["std"], optional = true}
rustls-pemfile = {version = "2.1.2", default-features = false, features = ["std"], optional=true }
rustc-hash = "1.1.0"
rayon = "1.10.0"
once_cell = "1.19.0"
hyper = "1.3.1"
blake3 = "1.5.4"
vaultrs = { version = "0.7.2" }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[build-dependencies]
cargo_metadata = "0.18.1"

[profile.release]
strip = true
lto = true
codegen-units = 1

[[bin]]
name = "cripta"
path = "src/bin/cripta.rs"

[[bench]]
name = "encryption_bench"
harness = false


[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
as_conversions = "warn"
expect_used = "warn"
missing_panics_doc = "warn"
panic = "warn"
panic_in_result_fn = "warn"
panicking_unwrap = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_self = "warn"

