[package]
name = "cripta"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

# All the AES,AWS,Vault features will be used as a runtime feature flag rather than compiletime
[features]
aes = []
mtls = ["dep:rustls", "dep:rustls-pemfile", "axum-server/tls-rustls"]
aws = []
release = ["aws", "mtls", "postgres_ssl"]
vault = []
postgres_ssl = ["dep:rustls", "dep:rustls-native-certs", "dep:rustls-pemfile", "dep:tokio-postgres", "dep:tokio-postgres-rustls"]
cassandra = []

[dependencies]
async-trait = "0.1.80"
aws-config = { version = "1.5.0" }
aws-sdk-kms = { version = "1.29.0" }
axum = { version = "0.7.5", features = ["macros"] }
axum-server = "0.7.3"
base64 = "0.22.1"
blake3 = "1.5.4"
cargo_metadata = "0.18.1"
charybdis = { git = "https://github.com/dracarys18/charybdis.git", rev = "1637c263f512adf7840705e3ab405a113437a6e3" }
config = { version = "0.14.0", features = ["toml"] }
diesel = { version = "2.2.4", features = ["postgres", "serde_json", "time"] }
diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }
error-stack = "0.4.1"
futures = "0.3.30"
hex = "0.4.3"
hyper = "1.3.1"
masking = { git = "https://github.com/juspay/hyperswitch.git", tag = "2024.12.17.0", features = ["cassandra"] }
moka = { version = "0.12", default-features = false, features = ["future"] }
once_cell = "1.19.0"
opentelemetry = { version = "0.29.1", features = ["metrics"] }
opentelemetry-prometheus = "0.29.1"
opentelemetry_sdk = { version = "0.29.0", features = ["metrics"] }
prometheus = "0.14.0"
rayon = "1.10.0"
ring = { version = "0.17.8", features = ["std"] }
rustc-hash = "1.1.0"
rustls = { version = "0.23.10", default-features = false, features = ["std"], optional = true }
rustls-native-certs = { version = "0.8.1", optional = true }
rustls-pemfile = { version = "2.1.2", default-features = false, features = ["std"], optional = true }
scylla = { git = "https://github.com/juspay/scylla-rust-driver.git", rev = "5700aa2847b25437cdd4fcf34d707aa90dca8b89", features = ["time-03"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_path_to_error = "0.1.16"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0.58"
time = { version = "0.3.36", features = ["parsing"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.10", optional = true }
tokio-postgres-rustls = { version = "0.13.0", optional = true }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "request-id", "util"] }
trace = "0.1.7"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", default-features = true, features = ["env-filter", "json", "registry"] }
ulid = "1.1.2"
vaultrs = { version = "0.7.2" }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[build-dependencies]
cargo_metadata = "0.18.1"

[profile.release]
strip = true
lto = true
codegen-units = 1

[[bin]]
name = "cripta"
path = "src/bin/cripta.rs"

[[bench]]
name = "encryption_bench"
harness = false


[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
as_conversions = "warn"
expect_used = "warn"
missing_panics_doc = "warn"
panic = "warn"
panic_in_result_fn = "warn"
panicking_unwrap = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_self = "warn"
