[package]
name = "cripta"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"

# All the AES,AWS,Vault features will be used as a runtime feature flag rather than compiletime
[features]
aes = []
mtls = ["dep:rustls", "dep:rustls-pemfile", "axum-server/tls-rustls"]
aws = []
vergen = ["build_info/vergen-gix", "build_info/vergen-gix-build"]
release = ["aws", "mtls", "postgres_ssl", "vergen"]
vault = []
postgres_ssl = ["dep:rustls", "dep:rustls-native-certs", "dep:rustls-pemfile", "dep:tokio-postgres", "dep:tokio-postgres-rustls", "rustls/aws_lc_rs"]
cassandra = []

[dependencies]
async-trait = "0.1.89"
aws-config = { version = "1.8.18" }
aws-sdk-kms = { version = "1.111.0" }
axum = { version = "0.7.9", features = ["macros"] }
axum-server = "0.7.3"
base64 = "0.22.1"
build_info = { git = "https://github.com/juspay/framework-libs-rs", rev = "8d1909cac8d99d5fd97f310859caa2c1deeb6937", features = ["cargo-workspace", "framework-libs-members-env"] }
log_utils = { git = "https://github.com/juspay/framework-libs-rs", rev = "8d1909cac8d99d5fd97f310859caa2c1deeb6937", features = ["tracing"] }
charybdis = "1.1.0"
config = { version = "0.14.1", features = ["toml"] }
diesel = { version = "2.3.11", features = ["postgres", "serde_json", "time"] }
diesel-async = { version = "0.9.2", features = ["postgres", "bb8"] }
error-stack = "0.5.0"
futures = "0.3.32"
hex = "0.4.3"
hyper = "1.10.1"
hyperswitch_masking = { version = "0.0.1", features = ["cassandra", "diesel", "serde"] }
moka = { version = "0.12", default-features = false, features = ["future"] }
once_cell = "1.21.4"
opentelemetry = { version = "0.29.1", features = ["metrics"] }
opentelemetry-prometheus = "0.29.1"
opentelemetry_sdk = { version = "0.29.0", features = ["metrics"] }
prometheus = "0.14.0"
rayon = "1.12.0"
ring = { version = "0.17.14", features = ["std"] }
rustc-hash = "1.1.0"
rustls = { version = "0.23.41", default-features = false, features = ["std"], optional = true }
rustls-native-certs = { version = "0.8.4", optional = true }
rustls-pemfile = { version = "2.2.0", default-features = false, features = ["std"], optional = true }
scylla = { version = "1.7.0", features = ["time-03"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_path_to_error = "0.1.20"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["parsing"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.18", optional = true }
tokio-postgres-rustls = { version = "0.13.0", optional = true }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "request-id", "util", "set-header"] }
trace = "0.1.7"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", default-features = true, features = ["env-filter", "json", "registry"] }
uuid = { version = "1.23.4", features = ["v7", "fast-rng"] }
vaultrs = { version = "0.7.4" }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.7"

[build-dependencies]
build_info = { git = "https://github.com/juspay/framework-libs-rs", rev = "8d1909cac8d99d5fd97f310859caa2c1deeb6937", features = ["cargo-workspace-build"] }

[profile.release]
strip = true
lto = true
codegen-units = 1

[[bin]]
name = "cripta"
path = "src/bin/cripta.rs"

[[bench]]
name = "encryption_bench"
harness = false


[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
as_conversions = "warn"
expect_used = "warn"
missing_panics_doc = "warn"
panic = "warn"
panic_in_result_fn = "warn"
panicking_unwrap = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_self = "warn"
